# dictionary-server/app/Http/Controllers/API/v1/LoveController.php
@@ -2,14 +2,17 @@
 
 namespace App\Http\Controllers\API\v1;
 
+use App\Models\LoveText;
 use Illuminate\Http\Request;
 use App\Traits\ResponseTrait;
 use Illuminate\Http\Response;
+use App\Models\LoveVocabulary;
 use Illuminate\Http\JsonResponse;
 use App\Http\Controllers\Controller;
 use Illuminate\Support\Facades\Validator;
 use App\Http\Requests\LoveRequest\StoreRequest;
 use App\Http\Requests\LoveRequest\UpdateRequest;
+use App\Http\Requests\LoveRequest\CheckIfExistRequest;
 use App\Repositories\LoveRepositoryService\ILoveRepository;
 
 class LoveController extends Controller
@@ -24,6 +27,53 @@ class LoveController extends Controller
         $this->iLoveRepository = $iLoveRepository;
     }
 
+    /**
+     * @OA\Get(
+     *      path="/api/v1/check-if-exist-by-type",
+     *      tags={"Favorite"},
+     *      summary="Check if a word or love text exists in favorite",
+     *      description="Check if a word or love text exists in the user's favorite by English keyword and user ID",
+     *     @OA\Parameter(
+     *          name="english",
+     *          in="query",
+     *          required=true,
+     *          @OA\Schema(type="string"),
+     *          description="English"
+     *      ),
+     *       @OA\Parameter(
+     *          name="user_id",
+     *          in="query",
+     *          required=true,
+     *          @OA\Schema(type="integer"),
+     *          description="User Id"
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="status", type="integer", example=200)
+     *          ),
+     *      ),
+     *      @OA\Response(
+     *          response=422,
+     *          description="Validation error",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="validator_errors", type="object", example={"english": {"Vui lòng nhập Từ khóa tiếng anh"}, "user_id": {"Id người dùng phải là số nguyên dương."}})
+     *          )
+     *      ),
+     * )
+     */
+    public function checkIfExistByType(CheckIfExistRequest $request)
+    {
+        try {
+            $word = $this->iLoveRepository->checkIfExistByType(new LoveVocabulary(), $request->english, $request->user_id);
+            $loveText = $this->iLoveRepository->checkIfExistByType(new LoveText(), $request->english, $request->user_id);
+
+            return $this->responseSuccess(['word' => $word, 'loveText' => $loveText], "Kiểm tra thành công.");
+        } catch (\Exception $e) {
+            return $this->responseError(null, $e->getMessage(), Response::HTTP_INTERNAL_SERVER_ERROR);
+        }
+    }
     /**
      * @OA\Get(
      *     path="/api/v1/total-love-item/{user_id}",
